--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-template"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 description = "Template for an Actix server app, hosted on Shuttle"
 readme = "README.md"
@@ -12,8 +12,11 @@ categories = ["template"]
 publish = false
 
 [dependencies]
-actix-web = "4.3.1"
-shuttle-actix-web = "0.24.0"
-shuttle-runtime = "0.24.0"
-tokio = "1.32.0"
-tracing = "0.1.37"
+actix-cors = "0.6.4"
+actix-web = "4.4.0"
+shuttle-actix-web = "0.29.0"
+shuttle-runtime = { version = "0.29.0", default-features = false }
+tokio = "1.33.0"
+tracing = "0.1.39"
+tracing-actix-web = "0.7.7"
+tracing-subscriber = "0.3.17"
