--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,30 @@
 [package]
-name = "actix-template"
-version = "1.1.3"
+name = "actix-web-template"
+version = "1.38.0"
 edition = "2021"
 description = "Template for an Actix server app, hosted on Shuttle"
 readme = "README.md"
-authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev"]
+authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
 repository = "https://github.com/sentinel1909/shuttle-template-actix"
 license = 'MIT'
 keywords = ["actix, shuttle"]
 categories = ["template"]
 publish = false
 
+[[bin]]
+name = "actix-web-template"
+path = "src/bin/main.rs"
+
+[lib]
+name = "actix_web_template_lib"
+path = "src/lib/lib.rs"
+
 [dependencies]
 actix-cors = "0.6.4"
-actix-web = "4.4.0"
-shuttle-actix-web = "0.32.0"
-shuttle-runtime = { version = "0.32.0", default-features = false }
-tokio = "1.34.0"
+actix-web = "4.4.1"
+shuttle-actix-web = "0.38.0"
+shuttle-runtime = { version = "0.38.0", default-features = false }
+tokio = "1.36.0"
 tracing = "0.1.40"
 tracing-actix-web = "0.7.8"
 tracing-subscriber = "0.3.17"
